Add option to stop/continue on error when running reaver in chroot